package ClientModel;

message TestObject {
    required string Name = 1;
    
    required uint32 TestId = 2;

    required bool IsWorking = 3;

    enum PriorityEnum {
        LOW = 1;
        MEDIUM = 2;
        HIGH = 3;
    }
    required PriorityEnum Priority = 4 [default=MEDIUM]; // Varint encoded

    required double Balance = 5;
    repeated Contact Contacts = 6;
}

message Contact {
    required string Name = 1;
    required string ContactDetails = 2;
}